--- a/index.html
+++ b/index.html
@@ -1,46 +1,79 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Comentarios</title>
+  <title>Mi página</title>
 </head>
 <body>
 
-<h2>Comentar</h2>
+<h1>BienvenidoooooOOO</h1>
 
-<textarea id="comentario"></textarea><br>
-<button id="btnComentar">Publicar</button>
+<!-- SECCIÓN LOGIN / REGISTRO -->
+<div id="auth">
+  <p>No has iniciado sesión</p>
+  <a href="login.html">Iniciar sesión</a><br>
+  <a href="register.html">Registrarse</a>
+</div>
 
-<div id="lista"></div>
+<!-- SECCIÓN COMENTARIOS -->
+<div id="comentarios" style="display:none;">
+  <h2>Comentarios</h2>
+
+  <textarea id="comentario"></textarea><br>
+  <button id="btnComentar">Publicar</button>
+
+  <div id="lista"></div>
+
+  <br>
+  <button id="btnLogout">Cerrar sesión</button>
+</div>
 
 <script type="module">
 import { auth, db } from "./js/firebase.js";
-import { onAuthStateChanged } from 
+import { onAuthStateChanged, signOut } from 
 "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
-import { addDoc, collection, getDocs } from 
+import { addDoc, collection, getDocs, serverTimestamp } from 
 "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
+const authDiv = document.getElementById("auth");
+const comentariosDiv = document.getElementById("comentarios");
+
 onAuthStateChanged(auth, (user) => {
-  if (!user) location.href = "login.html";
+  if (user) {
+    // Usuario logueado
+    authDiv.style.display = "none";
+    comentariosDiv.style.display = "block";
+    cargarComentarios();
+  } else {
+    // Usuario NO logueado
+    authDiv.style.display = "block";
+    comentariosDiv.style.display = "none";
+  }
 });
 
 btnComentar.addEventListener("click", async () => {
+  if (comentario.value.trim() === "") return;
+
   await addDoc(collection(db, "comentarios"), {
     texto: comentario.value,
-    fecha: new Date()
+    uid: auth.currentUser.uid,
+    fecha: serverTimestamp()
   });
+
   comentario.value = "";
-  cargar();
+  cargarComentarios();
 });
 
-async function cargar() {
+async function cargarComentarios() {
   lista.innerHTML = "";
-  const data = await getDocs(collection(db, "comentarios"));
-  data.forEach(d => {
-    lista.innerHTML += `<p>${d.data().texto}</p>`;
+  const datos = await getDocs(collection(db, "comentarios"));
+  datos.forEach(doc => {
+    lista.innerHTML += `<p>${doc.data().texto}</p>`;
   });
 }
 
-cargar();
+btnLogout.addEventListener("click", async () => {
+  await signOut(auth);
+});
 </script>
 
 </body>
