--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
 </head>
 <body>
 
-<h1>BienvenidoooooOOO</h1>
+<h1>Bienvenidoooooo</h1>
 
 <!-- SECCIÓN LOGIN / REGISTRO -->
 <div id="auth">
-  <p>No has iniciado sesión</p>
+  <p>No te has registrado???? pues que hingaos esperas</p>
+  <p>puchale ahi en registrarse si no te has registrado</p>
   <a href="login.html">Iniciar sesión</a><br>
   <a href="register.html">Registrarse</a>
 </div>
